// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Render AddressCardPreview with every available information 1`] = `
<DocumentFragment>
  <section
    class="addressCardPreview"
  >
    <div
      class="title"
    >
      <strong>
        Headquarter
      </strong>
    </div>
    <div
      class="flags"
    >
      Home・sulu_contact.primary_address・sulu_contact.billing_address・sulu_contact.delivery_address
    </div>
    Steinebach 13a
    <br />
    6850 Dornbirn
    <br />
    Vorarlberg
    <br />
    Austria
  </section>
</DocumentFragment>
`;

exports[`Render AddressCardPreview with minimal information 1`] = `
<DocumentFragment>
  <section
    class="addressCardPreview"
  >
    <div
      class="title"
    >
      <strong>
         
      </strong>
    </div>
    <div
      class="flags"
    >
      Home
    </div>
  </section>
</DocumentFragment>
`;
